--- a/recipes/gentoo/portage/make.conf
+++ b/recipes/gentoo/portage/make.conf
@@ -1,6 +1,8 @@
-# "nostrip" --- will provide the names of symbols in all the ELF object files.
+# "nostrip" -- will provide the names of symbols in all the ELF object files.
 #       As a drawback, the size of binaries may become dramatically bigger.
-FEATURES="nostrip"
+# "buildpkg" -- makes binary package each time emerge finishes building new
+#       package.
+FEATURES="nostrip buildpkg"
 
 CFLAGS="-O2 -pipe"
 
