--- a/recipes/binfarm-hep.yaml
+++ b/recipes/binfarm-hep.yaml
@@ -6,6 +6,7 @@ depends:
         use: [environment, tools]
         forward: True
     - binfarm-gentoo-base
+    - binfarm-gentoo-hep
 
 buildScript:
     echo "Bob needs build script to not be empty." > /dev/null
