--- a/recipes/gentoo-portages.yaml
+++ b/recipes/gentoo-portages.yaml
@@ -3,7 +3,8 @@ inherit: [fetch]
 metaEnvironment:
     PORTAGES_SNAPSHOT_MIRROR: http://distfiles.gentoo.org
 
-packageVars: [PORTAGES_SNAPSHOT_ID]
+packageVars:
+    - PORTAGES_SNAPSHOT_ID
 
 packageScript: |
     # Try to understand, whether we have a squashfuse installed on host:
@@ -18,10 +19,4 @@ packageScript: |
         (>&2 echo "Error: no userspace squashfs available on system.")
         exit 1
     fi
-    PORTAGES_SNAPSHOT=$(realpath gentoo-"$PORTAGES_SNAPSHOT_ID"*)
-    PORTAGES_SNAPSHOT_FILE=$(basename "$PORTAGES_SNAPSHOT")
-
-provideVars:
-    PORTAGES_SNAPSHOT: ${PORTAGES_SNAPSHOT}
-    PORTAGES_SNAPSHOT_FILE: ${PORTAGES_SNAPSHOT_FILE}
 
