~ fixing recipes to work with newer Gentoo stage3 (/usr/portage to /var/db)

--- a/classes/fetch.yaml
+++ b/classes/fetch.yaml
@@ -1,4 +1,6 @@
 checkoutScript: |
+    # Downloads the file referenced by URL in $1 into CWD if it does not exist,
+    # otherwise updates it to most actual copy (curl -z).
     fetch_file() {
         URL=$1
         FILENAME=$(basename "$URL")
