--- a/recipes/gentoo-binfarm.yaml
+++ b/recipes/gentoo-binfarm.yaml
@@ -143,6 +143,9 @@ buildScript: |
     # NOTE: the portages mountpoint (squashfs) is marked here as `ro' instead
     # of optional `z' as for SELinux' setenfoce=1 `z' option weirdly does not
     # permit read access to the mountpoint from within a running container.
+    # NOTE: the `SYS_PTRACE' and `--security-opt seccomp=unconfined' were
+    # needed to avoid various xattrs issue on the portages build directory,
+    # update gcc, etc.
     $DOCKER_CMD run --name ${BINFARM_CONTAINER_NAME} \
         --cap-add=SYS_PTRACE --security-opt seccomp=unconfined \
         --volume $(readlink -f ./portages.${PORTAGES_SNAPSHOT_ID}):/var/db/repos/gentoo:ro \
@@ -161,18 +164,24 @@ buildScript: |
     fi
     CONTAINER_ID=$($DOCKER_CMD container ls -a | grep ${BINFARM_CONTAINER_NAME} | awk '{print $1}')
     $DOCKER_CMD commit --change 'CMD ["/bin/false"]' ${CONTAINER_ID} gentoo-binfarm:latest
+    # Remove stopped container
     $DOCKER_CMD container rm ${CONTAINER_ID}
 
 packageVars:
     - GENTOO_ARCH
-    - GENTOO_STG3_TAG
     - DOCKER_CMD
+    - BINFARM_IMAGE_VERSION
 
-# TODO: forward BINFARM_IMG_TAG, PORTAGES_SNAPSHOT_ID
 packageScript: |
-    IMAGE_ARCHIVE_NAME=gentoo-binfarm-${BINFARM_IMG_TAG}-${PORTAGES_SNAPSHOT_ID}.tar
-    ${DOCKER_CMD} save gentoo-binfarm:latest | gzip > ${IMAGE_ARCHIVE_NAME}.gz
-    ln -fs ${IMAGE_ARCHIVE_NAME}.gz gentoo-binfarm-latest.tar.gz
-    rm -rf pkgs
-    cp -rf $1/pkgs pkgs
+    # Retrieve the GENTOO_STG3_TAG based on the stage3 tag
+    GENTOO_STG3_TAG=$( readlink -f $1/stage3.tar.xz \
+                     | sed -n 's/.\+stage3-amd64-\([^-.]\+\)\.tar\.xz/\1/p')
+    # Archivate image
+    IMAGE_ARCHIVE_NAME=gentoo-binfarm-${GENTOO_ARCH}-${GENTOO_STG3_TAG}-${BINFARM_IMAGE_VERSION}.tar
+    ${DOCKER_CMD} tag gentoo-binfarm:latest gentoo-binfarm:v${BINFARM_IMAGE_VERSION}
+    echo "Writing compressed image to ${IMAGE_ARCHIVE_NAME}.bz2 ..."
+    ${DOCKER_CMD} save gentoo-binfarm:latest | bzip2 > ${IMAGE_ARCHIVE_NAME}.bz2
+    ln -fs ${IMAGE_ARCHIVE_NAME}.bz2 gentoo-binfarm-latest.tar.gz
+    # Re-create symlink to the packages dir
+    ln -sf $1/pkgs
 
