~ switching to makefile scheme

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@ tags
 .pydevproject
 .settings
 .dat
+# common generated
+context.??.d/root.d.tar.gz
+binfarm-image.*.txt
+# particular generated
+root.00.d/etc/portage/make.conf
+root.01.d/etc/portage/sets/hepfarm
